--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>611</width>
+            <width>607</width>
             <height>533</height>
         </rect>
     </property>
@@ -19,6 +19,46 @@
         <name>caption</name>
         <string>Zertifikats und Schlüsselverwaltung</string>
     </property>
+    <widget>
+        <class>QPushButton</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>quitApp</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>480</x>
+                <y>490</y>
+                <width>108</width>
+                <height>32</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>Beenden</string>
+        </property>
+    </widget>
+    <widget>
+        <class>QLabel</class>
+        <property stdset="1">
+            <name>name</name>
+            <cstring>TextLabel1</cstring>
+        </property>
+        <property stdset="1">
+            <name>geometry</name>
+            <rect>
+                <x>10</x>
+                <y>510</y>
+                <width>220</width>
+                <height>20</height>
+            </rect>
+        </property>
+        <property stdset="1">
+            <name>text</name>
+            <string>(c) 2002 by christian@hohnstaedt.de</string>
+        </property>
+    </widget>
     <widget>
         <class>QTabWidget</class>
         <property stdset="1">
@@ -179,7 +219,7 @@
             </property>
             <attribute>
                 <name>title</name>
-                <string>Zertifikate</string>
+                <string>Signing Request</string>
             </attribute>
         </widget>
         <widget>
@@ -190,7 +230,7 @@
             </property>
             <attribute>
                 <name>title</name>
-                <string>Anfrage (PKCS#10)</string>
+                <string>Zertifikate</string>
             </attribute>
         </widget>
         <widget>
@@ -204,46 +244,6 @@
                 <string>Zertifikats Authorität</string>
             </attribute>
         </widget>
-    </widget>
-    <widget>
-        <class>QPushButton</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>quitApp</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>480</x>
-                <y>490</y>
-                <width>108</width>
-                <height>32</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>Beenden</string>
-        </property>
-    </widget>
-    <widget>
-        <class>QLabel</class>
-        <property stdset="1">
-            <name>name</name>
-            <cstring>TextLabel1</cstring>
-        </property>
-        <property stdset="1">
-            <name>geometry</name>
-            <rect>
-                <x>10</x>
-                <y>510</y>
-                <width>220</width>
-                <height>20</height>
-            </rect>
-        </property>
-        <property stdset="1">
-            <name>text</name>
-            <string>(c) 2002 by christian@hohnstaedt.de</string>
-        </property>
     </widget>
 </widget>
 <connections>
